--- a/datepicker.html
+++ b/datepicker.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
-<meta name="keywords" content="javascript,datepicker,date,persian,calendar"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
+<meta name="keywords" content="javascript,datepicker,date,persian,calendar"><script >
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-40548780-1', 'github.io');
+ga('send', 'pageview');
+
+</script></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
