--- a/persiandate.html
+++ b/persiandate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="./css/pages.css"/><link rel="stylesheet" href="./css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
 <meta name="keywords" content="javascript,datepicker,date,persian,calendar"><script >
