--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title>
+<!DOCTYPE html>
+<html ng-app="myApp">
 <head>
     <link rel="shortcut icon" href="/PersianWebToolkit/vendor/img/favicon.png"/>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -8,94 +7,119 @@
     <meta name="description" content="javascript,datepicker,date,persian,calendar">
     <meta name="keyword"
           content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/>
-    <link rel="stylesheet" href="/PersianWebToolkit/vendor/css/menu.css"/>
-    <link rel="stylesheet" href="/PersianWebToolkit/vendor/lib/prettify/theme/desert.css"/>
-    <link rel="stylesheet" href="/PersianWebToolkit/vendor/lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/PersianWebToolkit/vendor/css/pages.css"/>
-    <link rel="stylesheet" href="/PersianWebToolkit/vendor/css/over-bootstrap.css"/>
-    <script src="/PersianWebToolkit/vendor/lib/jquery/jquery.js"></script>
-    <script src="/PersianWebToolkit/vendor/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/PersianWebToolkit/vendor/lib/prettify/prettify.js"></script>
-    <script src="/PersianWebToolkit/vendor/lib/persian-date-0.1.8b.js"></script>
-    <script src="/PersianWebToolkit/vendor/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/PersianWebToolkit//vendor/css/menu.css">
+    <link rel="stylesheet" href="/PersianWebToolkit//vendor/css/pygment_trac.css">
+    <link rel="stylesheet" href="/PersianWebToolkit//vendor/css/pages.css">
+    <link rel="stylesheet" href="/PersianWebToolkit//vendor/css/over-bootstrap.css">
+    <script src="/PersianWebToolkit/vendor/js/jquery.js"></script>
+    <script src="/PersianWebToolkit/vendor/js/pwt-date.js"></script>
+    <script src="/PersianWebToolkit/vendor/js/persian-datepicker.js"></script>
+    <link rel="stylesheet"
+          href="http://rawgithub.com/babakhani/pwt.datepicker/Develop/dist/css/persian-datepicker-0.3.6.min.css">
+    <script src="/PersianWebToolkit/vendor/js/angular.js"></script>
 </head>
 <body><!-- Fixed navbar -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/PersianWebToolkit" class="navbar-brand">
-                <div class="page-logo"></div>
-                Persian Web Toolkit
-            </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
-                </li>
-                <li>
-                    <a href="/PersianWebToolkit/doc/datepicker/version.html">
-                        Datepicker
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="spacer">
-    <div id="main_content_wrap" class="outer">
+
+<div ng-include="'/PersianWebToolkit/include/head.html'"></div>
+<div id="main_content_wrap" class="outer">
+    <div class="board-box no-margin primary">
         <div class="container">
-            <section id="main_content" class="inner"><br/>
-                <div class="home-page-logo"></div>
+            <div class="jumbotron center-text">
+                <h1>Persian Web Toolkit</h1>
                 <p>
-                    Some Ui Tools Compatible With Persian Layout And <a target="_blank"
-                                                                        href="http://en.wikipedia.org/wiki/Jalali_calendar">Jalali
-                    Calendar</a>
+                    Some Ui Tools Compatible With Persian Layout And
+                    <a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar">
+                        Jalali Calendar</a>
                 </p>
-                <ul>
-                    <li>
-                        <a href="/PersianWebToolkit/doc/persiandate/version.html"> Persian Date</a>
-                        <p>
-                            javascript date library for parsing, validating, manipulating, and formatting persian dates
-                            System.
-                        </p>
-                    </li>
-                    <li>
-                        <a href="/PersianWebToolkit/doc/datepicker/version.html"> Persian Date Picker</a>
-                        <p>
-                            jquery datepicker plugin work with Iranian calendar
-                        </p>
-                    </li>
-                </ul>
-            </section>
+            </div>
         </div>
     </div>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4  product-box">
+                <h1>Persian Date </h1>
+                <!--<span class="label label-success">Version 0.1.8</span>-->
+                <p class="description">
+                    javascript date library for parsing, validating, manipulating, and formatting persian dates System.
+                </p>
+                <p>
+                    <a class="btn btn-default" href="https://github.com/babakhani/pwt.datepicker">Github</a>
+                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/persiandate/version.html">Document</a>
+                </p>
+            </div>
+            <div class="col-md-4 product-box">
+                <h1>Persian Date/Time Picker</h1>
+                <!--<span class="label label-success">Version 0.4.0</span>-->
+                <p class="description">
+                    jquery datepicker plugin work with Iranian calendar.
+                </p>
+                <p>
+                    <a class="btn btn-default" href="https://github.com/babakhani/PersianDate">Github</a>
+                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/datepicker/version.html">Document</a>
+                </p>
+            </div>
+            <div class="col-md-4 product-box">
+                <h1>Persian Heat chart</h1>
+                <p class="description">
+                    Persian Heat chart.
+                    A heat map is a graphical representation of data where the individual values contained in a matrix are represented as colors.
+                </p>
+                <p>
+                    <a class="btn  btn-disabled">Coming Soon !</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!--<div class="board-box">-->
+        <!--<div class="container center-text">-->
+            <!--<h3>Contribut</h3>-->
+            <!--<p>Fork project from github and join contribiuter</p>-->
+
+
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="row">-->
+        <!--<div class="container">-->
+            <!--<h3 class="center-text">Meet the team</h3>-->
+            <!--<div class="row">-->
+                <!--<div class="col-md-6 ">-->
+                    <!--<div class="team-item">-->
+                        <!--<div class="avatar">-->
+                            <!--<img src="https://avatars0.githubusercontent.com/u/3070333?v=3&s=460" alt="..."-->
+                                 <!--class="img-circle">-->
+                        <!--</div>-->
+                        <!--<h6><a href="github.com/babakhani" >Reza babakhani</a></h6>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-md-6">-->
+                    <!--<div class="team-item">-->
+                        <!--<div class="avatar">-->
+                            <!--<img src="https://avatars3.githubusercontent.com/u/1302253?v=3&s=460" alt="..."-->
+                                 <!--class="img-circle">-->
+                        <!--</div>-->
+                        <!--<h6><a href="github.com/pylover" >Pylover</a></h6>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+
 </div>
 <div id="footer_wrap" class="outer"></div>
-<footer class="inner">
-    <div class="container">
-        <p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a>
-            <script type="text/javascript">
-                var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-                document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-            </script>
-            <script type="text/javascript">
-                try {
-                    var pageTracker = _gat._getTracker("UA-40548780-1");
-                    pageTracker._trackPageview();
-                } catch (err) {
-                }
-            </script>
-        </p>
-    </div>
-</footer>
+
+<div ng-include="'/PersianWebToolkit/include/footer.html'"></div>
 </body>
+<script type="text/javascript">
+    var myApp = angular.module('myApp', [])
+    myApp.controller('myController', function ($scope) {
+        $scope.version = "0.3.7";
+        $scope.volume = '1.1 mb'
+        $scope.downloadUrl = 'https://github.com/babakhani/pwt.datepicker/archive/0.3.6.zip';
+        $scope.demoUrl = '/PersianWebToolkit/doc/datepicker/0.3.6/demo.html';
+    });
+</script>
 </html>
